# IEUMBOT

./: .editorconfig  .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/api/: .env.example  CLAUDE.md  README.md  RENDER.md  alembic.ini  apt.txt  nixpacks.toml  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260423_0001_initial_schema.py  20260423_0002_operation_control_schema.py  20260423_0003_retrieval_control_rules.py  20260423_0004_answer_settings_json.py  20260423_0005_guardrail_rules.py  20260423_0006_escalation_rules.py  20260424_0007_saas_org_baseline.py  20260425_0008_knowledge_metadata_json.py  20260425_0009_system_api_configs.py  20260425_0010_system_announcements_maintenance.py  20260425_0011_billing_plans.py  20260425_0012_notifications.py  20260425_0013_auto_enforcement.py  20260427_0014_admin_must_change_password.py  20260427_0015_end_users.py  20260507_0016_knowledge_diagnostics.py  20260509_0017_message_feedback.py  20260509_0018_session_context_entities.py  20260509_0019_hnsw_index.py  20260509_0020_quick_reply_hints.py  20260509_0021_skip_duplicate_reindex.py  20260513_0022_document_chunks_tsvector.py  20260518_0023_chatbot_settings_custom_instructions.py  20260518_0024_unanswered_logs.py  20260518_0025_conditional_responses.py  20260518_0026_security_events.py  20260518_0027_web_sources_sync_columns.py  20260518_0028_api_endpoints.py  20260518_0029_chatbot_response_format_rules.py  20260520_0030_api_endpoint_response_type.py  20260520_0031_knowledge_staging.py  20260520_0032_system_api_config_fast_model.py  20260523_0033_faq_items.py  20260523_0034_staging_duplicate_flag.py  20260524_0035_staging_merge_original_content.py  20260524_0036_faq_category_field.py  20260525_0037_document_chunk_context_text.py  20260629_0038_staging_extracted_text.py  (+7 more)
apps/api/app/: __init__.py  main.py
apps/api/app/api/: health.py  (+2 more)
apps/api/evals/: README.md  rag_benchmark.jsonl  run_rag_eval.py
apps/api/ieumbot_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/api/scripts/: render_start.sh  start.sh
(+511 files in other folders)
