[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ieumbot-api"
version = "0.1.0"
dependencies = [
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.3",
    "pydantic-settings==2.3.4",
    "sqlalchemy==2.0.35",
    "alembic==1.13.2",
    "psycopg2-binary==2.9.9",
    "pgvector==0.3.2",
    "cryptography==43.0.1",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "PyJWT==2.9.0",
    "apscheduler==3.10.4",
    "pdf2image==1.17.0",
    "Pillow==11.2.1",
    "pypdf==5.4.0",
    "pytesseract==0.3.13",
    "langfuse>=2.0.0",
    "openai>=1.51.0",
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "curl_cffi>=0.7.0",
    "trafilatura>=1.8.0",
    "playwright>=1.40.0",
    "arq>=0.26.0",
    "sentry-sdk[fastapi]>=2.18.0",
]

[project.scripts]
seed-local-admins = "app.scripts.seed_local_admins:main"

[project.optional-dependencies]
dev = [
  "ruff==0.6.9"
]
docling = [
  "docling>=2.0.0"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
